Added persist workspace and attach workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ orbs:
 
 jobs:
   print_hello:
+    environment:
+      ENV: test
     docker:
       - image: circleci/node:13.8.0
     steps:
@@ -23,6 +25,25 @@ jobs:
           name: printing world
           command: |
             echo "print world"
+      
+  save_hello_world_output:
+    docker:
+      -image: circleci/node:13.8.0
+    steps:
+      - persist_to_workspace:
+          root: /tmp/workspace
+              paths:
+                - helloword/output
+      - run:  "text to output here" > output.txt
+
+  print_output_file:
+    docker:
+        -image: circleci/node:13.8.0
+      steps:
+       - attach_workspace:
+          at: /tmp/workspace
+        - run:  cat output.txt
+
 
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -33,3 +54,5 @@ workflows:
       - welcome/run
       - print_hello
       - print_world
+      - save_hello_world_output
+      - print_output_file
