--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,10 @@ jobs:
           root: /tmp/workspace
           paths:
             - helloword/output
-      - run:  "text to output here" > output.txt
+      - run:   
+          name: writing text
+          command: |
+            echo "text to output here" > output.txt
 
   print_output_file:
     docker:
