--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           name: printing world
           command: |
             echo "print world"
-      
+
   save_hello_world_output:
     docker:
       -image: circleci/node:13.8.0
@@ -34,19 +34,21 @@ jobs:
           root: /tmp/workspace
           paths:
             - helloword/output
-      - run:   
+      - run:
           name: writing text
           command: |
             echo "text to output here" > output.txt
 
   print_output_file:
     docker:
-        -image: circleci/node:13.8.0
-      steps:
-       - attach_workspace:
+      -image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
           at: /tmp/workspace
-        - run:  cat output.txt
-
+      - run:
+          name: reading text from file
+          command: |
+            cat output.txt
 
 # Orchestrate or schedule a set of jobs
 workflows:
