--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: printing hello
           command: |
-            echo "print hello"
+            echo "print hello" ${EVN}
 
   print_world:
     docker:
@@ -30,25 +30,25 @@ jobs:
     docker:
       -image: circleci/node:13.8.0
     steps:
-      - persist_to_workspace:
-          root: /tmp/workspace
-          paths:
-            - helloword/output
       - run:
           name: writing text
           command: |
-            echo "text to output here" > output.txt
+            echo "text to output here" > ~/output.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
 
   print_output_file:
     docker:
       -image: circleci/node:13.8.0
     steps:
       - attach_workspace:
-          at: /tmp/workspace
+          at: ~/
       - run:
           name: reading text from file
           command: |
-            cat output.txt
+            cat ~/output.txt
 
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -61,3 +61,5 @@ workflows:
       - print_world
       - save_hello_world_output
       - print_output_file
+          requires:
+            - save_hello_world_output
