--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,6 @@ workflows:
       - print_hello
       - print_world
       - save_hello_world_output
-      - print_output_file
-            requires:
-              - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
