--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,11 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
 
 jobs:
-  print_hello:
-    environment:
-      ENV: test
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run:
-          name: printing hello
-          command: |
-            echo "print hello" ${EVN}
-
-  print_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run:
-          name: printing world
-          command: |
-            echo "print world"
-
   save_hello_world_output:
     docker:
-      -image: circleci/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
-      - run:
-          name: writing text
-          command: |
-            echo "text to output here" > ~/output.txt
+      - run: echo "hello world" > ~/output.txt
       - persist_to_workspace:
           root: ~/
           paths:
@@ -41,24 +13,15 @@ jobs:
 
   print_output_file:
     docker:
-      -image: circleci/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       - attach_workspace:
           at: ~/
-      - run:
-          name: reading text from file
-          command: |
-            cat ~/output.txt
+      - run: cat ~/output.txt
 
-# Orchestrate or schedule a set of jobs
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  my_workflow:
     jobs:
-      - welcome/run
-      - print_hello
-      - print_world
       - save_hello_world_output
       - print_output_file:
           requires:
