--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - print_pipeline_id:
-          to: << pipeline.id >>
+          id: << pipeline.id >>
 
   print_hello:
     docker:
